--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,30 +21,7 @@ bodyClass: "page-home"
   </div>
 </div>
 
-<div class="strip">
-  <div class="container pt-6 pb-6 pb-md-10">
-    <div class="row justify-content-start">
-      {% assign limit = site.home.limit_services | default: 6 %}
-      {% for service in site.services limit: limit %}
-      <div class="col-12 col-md-4 mb-1">
-        <div class="service service-summary">
-          <div class="service-content">
-            <h2 class="service-title">
-              <a href="{{ service.url | relative_url }}">{{ service.title }}</a>
-            </h2>
-            <p>{{ service.content | markdownify | strip_html | truncate: 100 }}</p>
-          </div>
-        </div>
-      </div>
-      {% endfor %}
-    </div>
-    <div class="row justify-content-center">
-      <div class="col-auto">
-        <a class="button button-primary" href="{{ "services" | relative_url }}">View All Services</a>
-      </div>
-    </div>
-  </div>
-</div>
+
 
 {% if site.data.features %}
 <div class="strip strip-grey">
@@ -52,11 +29,13 @@ bodyClass: "page-home"
     <div class="row justify-content-center">
 
       {% for feature in site.data.features %}
-      <div class="col-12 col-md-6 col-lg-4 mb-2">
+      <div class="col-12 col-md-6 col-lg-6 mb-2">
+        <div class="feature" style="text-align: left;">
+          <pre><code>{{ feature.code }}</code></pre>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-6 mb-2">
         <div class="feature">
-          {% if feature.image %}
-          <div class="feature-image"><img alt="{{ feature.title }} logo" src="{{ feature.image.url | relative_url }}" width="{{ feature.image.width }}" height="{{ feature.image.height }}" /></div>
-          {% endif %}
           <h2 class="feature-title">{{ feature.title }}</h2>
           <div class="feature-content">{{ feature.description }}</div>
         </div>
@@ -67,3 +46,13 @@ bodyClass: "page-home"
   </div>
 </div>
 {% endif %}
+
+<div class="strip">
+  <div class="feature" style="border: unset;">
+    <h2 class="feature-title">You've got questions, BrokerQL has answers.</h2>
+  </div>
+  
+  <div class="container pt-6 pb-6 pb-md-10">
+    
+  </div>
+</div>
