--- a/_sass/components/_feature.scss
+++ b/_sass/components/_feature.scss
@@ -8,6 +8,7 @@
   align-items: center;
   flex-direction: column;
   text-align: center;
+  justify-content: center;
   .feature-image {
     flex: 0 0 auto;
     width: 80px;
@@ -24,6 +25,6 @@
   }
   .feature-content {
     margin-bottom: 0;
-    margin-top: auto;
+    // margin-top: auto;
   }
 }
