--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,13 +6,7 @@
   <title>{% if page.title %}{{page.title}}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/png" href="{{ '/images/favicon-32x32.svg' | relative_url }}">
-  {% if page.asciicasts %}
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/asciinema-player@3.6.3/dist/bundle/asciinema-player.min.css">
-  {% endif %}
-  <!-- Google Fonts CDN -->
-  <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
-  <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet"> -->
+  {% include asciicasts.html section='head'%}
   <!-- Self host font -->
   <!-- <link rel="preload" href="{{ '/assets/fonts/playfair-display.woff2' | relative_url }}" as="font" type="font/woff2" crossorigin> -->
   <link href="{{ '/assets/css/style.css' | relative_url }}" rel="stylesheet">
@@ -39,15 +33,6 @@
   {% include sub-footer.html %}
   <script type="text/javascript" src="{{ '/assets/js/scripts.js' | relative_url }}"></script>
   {% include google-analytics.html %}
-  {% if page.asciicasts %}
-  <script src="https://cdn.jsdelivr.net/npm/asciinema-player@3.6.3/dist/bundle/asciinema-player.min.js"></script>
-  <script type="text/javascript">
-      AsciinemaPlayer.create('{{ page.asciicasts }}',
-        document.getElementById('terminal'), {
-        loop: true,
-        autoPlay: true,
-      });
-  </script>
-  {% endif %}
+  {% include asciicasts.html section='body'%}
 </body>
 </html>
