--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,20 +6,17 @@ bodyClass: "page-home"
 <div class="intro">
   <div class="container">
     <div class="row justify-content-start">
-      <div class="col-12 col-md-7 col-lg-6 order-2 order-md-1">
+      <div class="col-12 col-md-7 col-lg-4 order-2 order-md-1">
         {{ content }}
         {% if page.show_call_box %}
           {% include call.html show_button=true %}
         {% endif %}
       </div>
-      {% if page.intro_image %}
-      <div class="col-12 col-md-4 col-lg-4 order-1 order-md-2 position-relative">
+      {% if page.intro_image or page.asciicasts %}
+      <div {% if page.asciicasts %} id="terminal" {% endif %} class="col-12 col-md-4 col-lg-8 order-1 order-md-2 position-relative">
+        {% if page.intro_image %}
         <img alt="{{ page.title }}" class="intro-image{% if page.intro_image_absolute %} intro-image-absolute{% endif %}{% if page.intro_image_hide_on_mobile %} intro-image-hide-mobile{% endif %}" src="{{ page.intro_image | relURL }}" />
-      </div>
-      {% endif %}
-      {% if page.asciicasts %}
-      <div class="col-12 col-md-6 col-lg-6 order-1 order-md-2 position-relative">
-        <div id="terminal"></div>
+        {% endif %}
       </div>
       {% endif %}
     </div>
