--- a/_sass/pages/_page-home.scss
+++ b/_sass/pages/_page-home.scss
@@ -1,2 +1,11 @@
 .page-home {
 }
+
+.strapline {
+  font-family: SteampipeSQL,Roboto Slab,monospace;
+}
+
+h1.strapline {
+  line-height: normal;
+  letter-spacing: .04em;
+}
