--- a/_includes/asciicasts.html
+++ b/_includes/asciicasts.html
@@ -1,9 +1,12 @@
+{% assign cdn = '/assets/cdn' | relative_url %}
+{% if site.cdn %}{% assign cdn = site.cdn %}{% endif %}
+
 {% if page.asciicasts and include.section == 'head' %}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/asciinema-player@3.6.3/dist/bundle/asciinema-player.min.css">
+<link rel="stylesheet" href="{{ cdn }}/npm/asciinema-player@3.6.3/dist/bundle/asciinema-player.min.css">
 {% endif %}
 
 {% if page.asciicasts and include.section == 'body' %}
-<script src="https://cdn.jsdelivr.net/npm/asciinema-player@3.6.3/dist/bundle/asciinema-player.min.js"></script>
+<script src="{{ cdn }}/npm/asciinema-player@3.6.3/dist/bundle/asciinema-player.min.js"></script>
 <script type="text/javascript">
     AsciinemaPlayer.create('{{ page.asciicasts }}',
       document.getElementById('terminal'), {
