--- a/_includes/sub-footer.html
+++ b/_includes/sub-footer.html
@@ -6,9 +6,7 @@
           {% if site.data.social %}
             {% include social.html %}
           {% endif %}
-          {% if site.data.seo.copyright_text %}
-          <div class="copyright">{{ site.data.seo.copyright_text }}</div>
-          {% endif %}
+          <div class="copyright"><small>Copyrights &copy; {{site.time | date: '%Y'}} {{site.title}}</small><small>&nbsp;&#124;&nbsp;Built with <span>❤</span> by jamespan</small></div>
         </div>
       </div>
     </div>
