--- a/_sass/components/_feature.scss
+++ b/_sass/components/_feature.scss
@@ -5,7 +5,7 @@
   padding: 20px;
   background-color: #ffffff;
   display: flex;
-  align-items: center;
+  // align-items: center;
   flex-direction: column;
   text-align: center;
   justify-content: center;
