--- a/_sass/components/_fonts-cdn.scss
+++ b/_sass/components/_fonts-cdn.scss
@@ -12,7 +12,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url('../fonts/roboto-slab_5.0.9_latin-400-normal.ttf') format('truetype');
+  src: url({{https://cdn.jsdelivr.net}}/fontsource/fonts/roboto-slab@latest/latin-400-normal.ttf) format('truetype');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0300-0301,U+0303-0304,U+0308-0309,U+0323,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
@@ -22,6 +22,6 @@
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src: url('../fonts/roboto-slab_5.0.9_latin-700-normal.ttf') format('truetype');
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/roboto-slab@latest/latin-700-normal.ttf) format('truetype');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0300-0301,U+0303-0304,U+0308-0309,U+0323,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
