--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@
   <!-- Self host font -->
   <link rel="preload" href="{{ '/assets/fonts/SteampipeSQL.ttf' | relative_url }}" as="font" crossorigin>
   <link href="{{ '/assets/css/style.css' | relative_url }}" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/styles/default.min.css">
+  <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js"></script>
   
   {% if page.description %}<meta name="description" content="{{ page.description }}" />{% endif %}
   {% if page.meta_title %}<meta property="og:title" content="{{ page.meta_title }}"/>{% else %}<meta property="og:title" content="{{ page.title }}"/>{% endif %}
@@ -33,6 +35,12 @@
   {% include sub-footer.html %}
   <script type="text/javascript" src="{{ '/assets/js/scripts.js' | relative_url }}"></script>
   {% include google-analytics.html %}
-  {% include asciicasts.html section='body'%}
+  {% include asciicasts.html section='body'%}  
+  <script type="text/javascript">
+      hljs.configure({
+        noHighlightRe: /^no-highlight$/i,
+      });
+      hljs.highlightAll();
+  </script>
 </body>
 </html>
